# ChangeLog for dev-python/sphinx-to-github
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sphinx-to-github-9999 (15 May 2010)

  15 May 2010; James Rowe <jnrowe@gmail.com> +sphinx-to-github-9999.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
