@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD sphinx-to-github-9999.ebuild 615 RMD160 4905027573e9b772d137706f9ea019a38de8ae3d SHA1 481ea3024dc01aa958646d866f88486a21221376 SHA256 357faaf8570fd2cbc4a3eeaa5dd2e44ad56cd204979b6bd4f1871ea32045e8f1
-MISC ChangeLog 285 RMD160 a7e64c82716358e0dc79707fc796c0db224d8ff1 SHA1 4a5ba04ef480346d009fcd41c3ac866358aedfb5 SHA256 8dae3e7e1bfc43b027445f458c2d15b3396c2257032316065d8ccac4229bd2cc
-MISC metadata.xml 817 RMD160 17d032a100023cf2193d8cbcbe877fa14db30db3 SHA1 52a270eafa0d21557a8338a1b1c7d1e8f0eebbe0 SHA256 dfbe123faa09848c860f57d71c0c5c8c39a3efd6225705214cce1cfd645e822c
+EBUILD sphinx-to-github-9999.ebuild 616 RMD160 29495cdb08a4db1b770ebcfa4ac3f89e13dbd5fa SHA1 79b9231c67f4e03f2451ddd92a5214ee2e7ca4fc SHA256 13b2abaff17784707be92e92cf380efec19676f1d5835ffb87aab888ff3c2d55
+MISC ChangeLog 439 RMD160 736a5c6e7afc240fd0d15dd2627bf5018663e00d SHA1 ca8d5b7f3fcac5a2e6c76e5de8aaded6d391aa57 SHA256 f5cf96ea90b27063c44d7cf677a6574b938789af7b0729164b362625f329e475
+MISC metadata.xml 820 RMD160 1b46b113f6edf3fa967d763caf19572eee4dc4c3 SHA1 4b9f716d3c4cba3124fb336df0fd113a9e1502b2 SHA256 ea4425a4d8f41e18b707950f99481051392aeb95caec9a18b4c74190cafcc9e5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkyZFDwACgkQzJrj3cAXR0l9QwCfT75dkoRthHGeKOpC01Rxg+St
-Z8IAnAjwTIWc88odfJUbWYOp/Bs2JktK
-=cVE1
+iEYEARECAAYFAkzXEqEACgkQzJrj3cAXR0lRlQCdGtqPF6OmZH8bD+TmYH6RwMGJ
+HegAmwcoLnu+Cy2nDPn/t51skjxz0pCd
+=ABV+
 -----END PGP SIGNATURE-----
