@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Nov 2010; James Rowe <jnrowe@gmail.com> sphinx-to-github-9999.ebuild,
+  metadata.xml:
+  Updated URL for GitHub's recent switch to HTTPS everywhere.
+
 *sphinx-to-github-9999 (15 May 2010)
 
   15 May 2010; James Rowe <jnrowe@gmail.com> +sphinx-to-github-9999.ebuild,
